N°4460 - Fix datamodel viewer autocomplete contrast in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -262,3 +262,11 @@ $ibo-vendors-c3--legend-item--fill: $ibo-color-grey-100;
 $ibo-vendors-c3--axis--fill: $ibo-color-grey-200;
 
 $ibo-run-query--highlight--background-color: $ibo-color-primary-700;
+
+$ibo-datamodel-viewer--classes-list--selectize-input--background-color: $ibo-color-grey-700;
+$ibo-datamodel-viewer--classes-list--selectize-input--border-color: $ibo-color-grey-500;
+$ibo-datamodel-viewer--classes-list--selectize-input--color: $ibo-color-grey-200;
+$ibo-datamodel-viewer--lifecycle--code--color: $ibo-color-grey-300;
+$ibo-datamodel-viewer--lifecycle--stimuli--color: $ibo-color-blue-300;
+$ibo-datamodel-viewer--lifecycle--attribute-option--color: $ibo-color-pink-300;
+$ibo-datamodel-viewer--schema--tooltip--fill: $ibo-color-grey-600;
